modules/network/aws/main.tf
# Create a VPC
resource "aws_vpc" "main_vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "${var.app_name}-vpc"
        Environment = var.environment
    }
}

# Create an Internet Gateway
resource "aws_internet_gateway" "main_igw" {
    vpc_id = aws_vpc.main_vpc.id
    tags = {
        Name = "${var.app_name}-igw"
        Environment = var.environment
    }
}

# Create a public subnet
resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.main_vpc.id
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = true
    tags = {
        Name = "${var.app_name}-public-subnet"
        Environment = var.environment
    }
}

resource "aws_route_table" "public_rt" {
    vpc_id = aws_vpc.main_vpc.id
    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.main_igw.id
    }
    tags = {
        Name = "PublicRouteTable"
        Environment = var.environment
    }
}

resource "aws_route_table_association" "public_subnet" {
    subnet_id = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.public_rt.id
}

# Create a private subnet
resource "aws_subnet" "private_subnet" {
    vpc_id = aws_vpc.main_vpc.id
    cidr_block = "10.0.2.0/24"
    map_public_ip_on_launch = false
    tags = {
        Name = "${var.app_name}-private-subnet"
        Environment = var.environment
    }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.main_vpc.id
    tags = {
    Name = "PrivateRouteTable"
    Environment = var.environment
  }
}

resource "aws_route_table_association" "private_subnet" {
  subnet_id = aws_subnet.private_subnet.id
  route_table_id = aws_route_table.private_rt.id
}
